<resources>
    <string name="app_name">远程监控</string>
    <string name="name">姓名</string>
    <string name="userNumber">userNumber</string>
    <string name="password">password</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="remember_password_ch">记住密码</string>
    <string name="remember_password_eg">remember_password</string>
    <string name="select_device">选择设备</string>
    <string name="device_manager">管理设备</string>
    <string name="search_ch">搜索</string>
    <string name="input_something">请输入相关词</string>
    <string name="confirm_ch">确认</string>
    <string name="dataValidTime">设置数据存储期限</string>
    <string name="update_device_property">设置设备属性</string>

</resources>
