<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_login_blank_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:title="基站环境远程监控" />

    <LinearLayout
        android:id="@+id/ll_login_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_login_toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/frame_bg"
        android:elevation="@dimen/elevation"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_login_login_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/login" />

        <Button
            android:id="@+id/bt_login_register_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gainsboro"
            android:text="@string/register" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_edit_basket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_login_page_title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/frame_bg"
        android:elevation="@dimen/elevation"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/actv_login_user_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userNumber" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/actv_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <ImageView
                android:id="@+id/password_is_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password_visible" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_login_edit_basket"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_login_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password_ch" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acbt_login_login_or_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_login_edit_basket"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bt_bg"
        android:elevation="@dimen/elevation"
        android:text="@string/login" />
</RelativeLayout>